--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,14 +9,6 @@
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/oswaldregular.woff" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
-    <script>
-      document.createElement( "picture" );
-    </script>
-    <script src="js/polyfill/picturefill.js" async=""></script>
-    <script src="js/polyfill/svguse.js" defer=""></script>
-    <script src="js/polyfill/focus-visible.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=c461c44d-a89d-4167-a9e9-008782f98509" type="text/javascript"></script>
-    <script src="js/yandexMap.js" type="text/javascript"></script>
   </head>
   <body class="content no-js">
     <script>
@@ -28,11 +20,11 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo page-header__logo" href="index.html" alt="Переход на главную страницу">
+        <a class="logo page-header__logo" href="index.html" aria-label="Переход на главную страницу">
           <picture>
             <source media="(min-width: 1220px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+            <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
           </picture>
         </a>
         <nav class="main-nav page-header__nav">
@@ -59,7 +51,7 @@
         <ul class="catalog__list">
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#" tabindex="-1">
+              <a href="#" aria-label="Перейти в карточку товара">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
@@ -67,12 +59,12 @@
 
                   <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 500г" tabindex="0">
+                  <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 500г">
                 </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
-                  <th><a class="product__link" href="#">Cat energy pro 500 г</a></th>
+                  <th colspan="2"><a class="product__link" href="#">Cat energy pro 500 г</a></th>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Обьем</td>
@@ -92,7 +84,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#" tabindex="-1">
+              <a href="#" aria-label="Перейти в карточку товара">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
@@ -100,12 +92,12 @@
 
                   <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 1000г" tabindex="0">
+                  <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 1000г">
                 </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
-                  <th><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
+                  <th colspan="2"><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Обьем</td>
@@ -125,7 +117,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#" tabindex="-1">
+              <a href="#" aria-label="Перейти в карточку товара">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
@@ -133,12 +125,12 @@
 
                   <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 500г" tabindex="0">
+                  <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 500г">
                 </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
-                  <th><a class="product__link" href="#">Cat energy pro 500 г</a></th>
+                  <th colspan="2"><a class="product__link" href="#">Cat energy pro 500 г</a></th>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Обьем</td>
@@ -158,7 +150,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#" tabindex="-1">
+              <a href="#" aria-label="Перейти в карточку товара">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
@@ -166,12 +158,12 @@
 
                   <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 1000г" tabindex="0">
+                  <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 1000г">
                 </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
-                  <th><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
+                  <th colspan="2"><a class="product__link" href="#">Cat energy pro 1000 г</a></th>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Обьем</td>
@@ -191,7 +183,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#" tabindex="-1">
+              <a href="#" aria-label="Перейти в карточку товара">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
@@ -199,12 +191,12 @@
 
                   <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 500г" tabindex="0">
+                  <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 500г">
                 </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
-                  <th><a class="product__link" href="#">Cat energy slim 500 г</a></th>
+                  <th colspan="2"><a class="product__link" href="#">Cat energy slim 500 г</a></th>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Обьем</td>
@@ -224,7 +216,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#" tabindex="-1">
+              <a href="#" aria-label="Перейти в карточку товара">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
@@ -232,12 +224,12 @@
 
                   <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 1000г" tabindex="0">
+                  <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 1000г">
                 </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
-                  <th><a class="product__link" href="#">Cat energy slim 1000 г</a></th>
+                  <th colspan="2"><a class="product__link" href="#">Cat energy slim 1000 г</a></th>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Обьем</td>
@@ -257,7 +249,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#" tabindex="-1">
+              <a href="#" aria-label="Перейти в карточку товара">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
@@ -265,12 +257,12 @@
 
                   <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рисом 500г" tabindex="0">
+                  <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рисом 500г">
                 </picture>
               </a>
               <table class="product__composition">
                 <tr class="product__title">
-                  <th><a class="product__link" href="#">Cat energy slim 500 г</a></th>
+                  <th colspan="2"><a class="product__link" href="#">Cat energy slim 500 г</a></th>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Обьем</td>
@@ -345,11 +337,11 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+  <footer class="page-footer">
       <div class="page-footer__address address">
-        <div class="address__wrapper">
+        <div class="address__wrapper address__wrapper--white">
           <p class="address__invite">Приглашаем<br> к сотрудничеству дилеров!</p>
-          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="address__text">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
         <div class="address__map address__map--pin">
           <div class="address__yandex-map" id="yandex-map"></div>
@@ -361,29 +353,29 @@
         </div>
       </div>
       <div class="page-footer__container">
-        <a class="logo page-footer__logo" href="index.html" alt="Переход на главную страницу">
+        <a class="logo page-footer__logo" href="index.html">
           <img class="logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
         </a>
         <ul class="social-list page-footer__social">
           <li class="social-list__item">
-            <a href="#" class="social__link" alt="Перейти на Вконтакте">
-              <svg class="social__icon social__icon--vk" width="25" height="20" viewbox="0 0 22 12">
+            <a href="#" class="social-list__link" aria-label="Перейти на Вконтакте">
+              <svg class="social-list__icon social-list__icon--vk" width="22" height="12" viewbox="0 0 22 12">
                 <use xlink:href="img/sprite.svg#sprite-vk"></use>
               </svg>
               Мы Вконтакте
             </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social__link" alt="Перейти в Инстаграм">
-              <svg class="social__icon social__icon--insta" width="25" height="20" viewbox="0 0 16.1 16">
+            <a href="#" class="social-list__link" aria-label="Перейти в Инстаграм">
+              <svg class="social-list__icon social-list__icon--insta" width="16" height="16" viewbox="0 0 16.1 16">
                 <use xlink:href="img/sprite.svg#sprite-insta"></use>
               </svg>
               Мы в Инстаграме
             </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social__link" alt="Перейти в Фейсбук">
-              <svg class="social__icon social__icon--insta" width="25" height="20" viewbox="0 0 10 19">
+            <a href="#" class="social-list__link" aria-label="Перейти в Фейсбук">
+              <svg class="social-list__icon social-list__icon--fb" width="10" height="19" viewbox="0 0 10 19">
                 <use xlink:href="img/sprite.svg#sprite-fb"></use>
               </svg>
               Мы в Фейсбуке
@@ -391,9 +383,9 @@
           </li>
         </ul>
         <div class="copyright page-footer__copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Перейти на курс HTML Academy">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Перейти на курс HTML Academy">
             HTML Academy
-            <svg class="copyright__icon" width="30px" height="35" viewbox="0 0 60 60">
+            <svg class="copyright__icon" width="27px" height="34" viewbox="0 0 27 35">
               <use xlink:href="img/sprite.svg#sprite-htmlacademy"></use>
             </svg>
           </a>
@@ -401,6 +393,14 @@
       </div>
     </footer>
 
+    <script>
+      document.createElement( "picture" );
+    </script>
+    <script src="js/polyfill/picturefill.js" async=""></script>
+    <script src="js/polyfill/svguse.js" defer=""></script>
+    <script src="js/polyfill/focus-visible.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=c461c44d-a89d-4167-a9e9-008782f98509" type="text/javascript"></script>
+    <script src="js/yandexMap.js" type="text/javascript"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
