--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,6 @@
     <link rel="preload" href="fonts/oswaldregular.woff" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
 
-    <script>
-      document.createElement( "picture" );
-    </script>
-    <script src="js/polyfill/picturefill.js" async=""></script>
-    <script src="js/polyfill/svguse.js" defer=""></script>
-    <script src="js/polyfill/focus-visible.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=c461c44d-a89d-4167-a9e9-008782f98509" type="text/javascript"></script>
-    <script src="js/yandexMap.js" type="text/javascript"></script>
   </head>
   <body class="content no-js">
     <script>
@@ -33,7 +25,7 @@
           <picture>
             <source media="(min-width: 1220px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="logo-image page-header__logo--ml" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+            <img class="logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
           </picture>
         </a>
         <nav class="main-nav page-header__nav">
@@ -82,7 +74,7 @@
             </li>
             <li class="programs__item programs__item--cat-pro">
               <h3 class="programs__title">Набор массы</h3>
-              <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              <p class="programs__description">Заработать авторитет среди дворовых котов <br> и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые<br> мышцы!
               </p>
               <a class="programs__link" href="catalog.html">Каталог pro</a>
             </li>
@@ -125,11 +117,11 @@
             <div class="example__wrapper">
               <ul class="example__list">
                 <li class="example__item">
-                  <b class="example__value">5 кг</b>
+                  <p class="example__value">5 кг</p>
                   <p class="example__index">снижение веса</p>
                 </li>
                 <li class="example__item">
-                  <b class="example__value">60 дней</b>
+                  <p class="example__value">60 дней</p>
                   <p class="example__index">затрачено времени</p>
                 </li>
               </ul>
@@ -195,24 +187,24 @@
         </a>
         <ul class="social-list page-footer__social">
           <li class="social-list__item">
-            <a href="#" class="social__link" alt="Перейти на Вконтакте">
-              <svg class="social__icon social__icon--vk" width="25" height="20" viewbox="0 0 22 12">
+            <a href="#" class="social-list__link" aria-label="Перейти на Вконтакте">
+              <svg class="social-list__icon social-list__icon--vk" width="22" height="12" viewbox="0 0 22 12">
                 <use xlink:href="img/sprite.svg#sprite-vk"></use>
               </svg>
               Мы Вконтакте
             </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social__link" alt="Перейти в Инстаграм">
-              <svg class="social__icon social__icon--insta" width="25" height="20" viewbox="0 0 16.1 16">
+            <a href="#" class="social-list__link" aria-label="Перейти в Инстаграм">
+              <svg class="social-list__icon social-list__icon--insta" width="16" height="16" viewbox="0 0 16.1 16">
                 <use xlink:href="img/sprite.svg#sprite-insta"></use>
               </svg>
               Мы в Инстаграме
             </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social__link" alt="Перейти в Фейсбук">
-              <svg class="social__icon social__icon--fb" width="25" height="20" viewbox="0 0 10 19">
+            <a href="#" class="social-list__link" aria-label="Перейти в Фейсбук">
+              <svg class="social-list__icon social-list__icon--fb" width="10" height="19" viewbox="0 0 10 19">
                 <use xlink:href="img/sprite.svg#sprite-fb"></use>
               </svg>
               Мы в Фейсбуке
@@ -220,9 +212,9 @@
           </li>
         </ul>
         <div class="copyright page-footer__copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Перейти на курс HTML Academy">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Перейти на курс HTML Academy">
             HTML Academy
-            <svg class="copyright__icon" width="30px" height="35" viewbox="0 0 60 60">
+            <svg class="copyright__icon" width="27px" height="34" viewbox="0 0 27 35">
               <use xlink:href="img/sprite.svg#sprite-htmlacademy"></use>
             </svg>
           </a>
@@ -230,6 +222,14 @@
       </div>
     </footer>
 
+    <script>
+      document.createElement( "picture" );
+    </script>
+    <script src="js/polyfill/picturefill.js" async=""></script>
+    <script src="js/polyfill/svguse.js" defer=""></script>
+    <script src="js/polyfill/focus-visible.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=c461c44d-a89d-4167-a9e9-008782f98509" type="text/javascript"></script>
+    <script src="js/yandexMap.js" type="text/javascript"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
